# time-to-work

./: .gitignore  CMakeLists.txt  main.cpp
res/: qml.qrc
res/view/: main.qml
res/view/component/: Space.qml
src/: AppController.cpp  AppController.h
src/plugin/redmine/: RedmineApi.cpp  RedmineApi.h
src/plugin/redmine/api/: Enumerations.cpp  Enumerations.h  TimeEntries.cpp  TimeEntries.h
src/plugin/redmine/api/data/: Error.h  Issue.h  Project.h  TimeEntry.h  User.h  WorkActivity.h
